<resources>
    <string name="app_name">CodeFine</string>
    <string name="Beginning">Beginning</string>
    <string name="Algorithms">Algorithms</string>
    <string name="Advanced">Advanced</string>
    <string name="our_site">OUR SITE</string>
    <string name="chat">CHAT</string>
    <string name="editor">EDITOR</string>
    <string name="hello">Hello </string>
    <string name="introduction">Introduction</string>
    <string name="installing">Installing software</string>
    <string name="first_program">First program</string>
    <string name="solved_task">Task solved</string>
    <string name="tip">Need a tip? Click.</string>
    <string name="link_copy">Link was copied</string>
    <string name="choose_lang">Choose your language</string>
    <string name="rating">Rating</string>
    <string name="lang">en</string>
    <string name="variables">Variables</string>
    <string name="data_types">Data types</string>
    <string name="if_else">Conditionals</string>
    <string name="loops">Loops</string>
    <string name="arrays">Arrays</string>
    <string name="std_functions">Algorithms</string>
    <string name="functions">Functions</string>
    <string name="structures">Structures</string>
    <string name="worktime">Program\'s speed</string>
    <string name="asymptotic">Asymptotic</string>
    <string name="sort">Sorting</string>
    <string name="binsearch">Binary search</string>
    <string name="banner_ad_id" translatable="false">ca-app-pub-7252244556177655/5561037692</string>
    <string name="banner_ad_id_tip" translatable="false">ca-app-pub-3940256099942544/5224354917</string>
    <string name="banner_ad_id_lambda" translatable="false">ca-app-pub-7252244556177655~2124355568</string>
    <!--ad_id ca-app-pub-3940256099942544/6300978111-->

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_article">activity_article</string>
    <string name="title_activity_articles">Articles</string>
    <string name="title_activity_task">TaskActivity</string>
    <string name="vectors">Vector</string>
    <string name="no_task">There are no task in this chapter</string>
</resources>
