<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TaskActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:paddingLeft="-1dp"
        android:paddingRight="-1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <FrameLayout
            android:id="@+id/Header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:cropToPadding="false"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/header"
                tools:layout_editor_absoluteX="0dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/vsl"
                android:gravity="center"
                android:text="@string/app_name"
                android:textColor="@android:color/background_light"
                android:textSize="36sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:paddingLeft="20dp"
                android:paddingTop="20dp"
                android:paddingRight="20dp">

                <ImageView
                    android:id="@+id/imageView19"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:adjustViewBounds="true"
                    android:scaleType="fitStart"
                    app:srcCompat="@drawable/settings" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <ImageView
                    android:id="@+id/imageView20"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:adjustViewBounds="true"
                    android:scaleType="fitStart"
                    app:srcCompat="@drawable/donates" />

            </LinearLayout>

        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/last"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:background="@drawable/left_arrow" />

            <TextView
                android:id="@+id/pointer"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center"
                android:text="1/1"
                android:textColor="@android:color/background_dark"
                android:textSize="24sp" />

            <Button
                android:id="@+id/next"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:background="@drawable/right_arrow" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/tip"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textSolve"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:fontFamily="@font/vsl"
                    android:gravity="right|center_vertical"
                    android:paddingRight="5dp"
                    android:text="@string/solved_task"
                    android:textColor="@android:color/black"
                    android:textSize="24sp" />

                <CheckBox
                    android:id="@+id/solve"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:checked="false"
                    android:fontFamily="@font/vsl"
                    android:textSize="1sp" />
            </LinearLayout>

            <Space
                android:layout_width="10dp"
                android:layout_height="match_parent"
                android:background="@color/nil" />

            <Button
                android:id="@+id/tip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/tip"
                android:fontFamily="@font/vsl"
                android:text="@string/tip"
                android:textAllCaps="false"
                android:textSize="24sp" />
        </LinearLayout>

        <WebView
            android:id="@+id/my_browser"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>