<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/background"
            android:orientation="vertical"
            android:paddingLeft="-1dp"
            android:paddingRight="-1dp">

            <FrameLayout
                android:id="@+id/Header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:cropToPadding="false"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/header"
                    tools:layout_editor_absoluteX="0dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/vsl"
                    android:gravity="center"
                    android:text="@string/app_name"
                    android:textColor="@android:color/background_light"
                    android:textSize="36sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:paddingLeft="20dp"
                    android:paddingTop="20dp"
                    android:paddingRight="20dp">

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                </LinearLayout>

            </FrameLayout>

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/vsl"
                android:gravity="center_horizontal"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:text="@string/choose_lang"
                android:textColor="@android:color/black"
                android:textSize="36sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginLeft="20sp"
                android:layout_marginRight="20dp"
                android:background="@color/nil"
                android:orientation="horizontal">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2">

                    <ImageView
                        android:id="@+id/english"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:adjustViewBounds="true"
                        android:background="@android:color/black"
                        android:cropToPadding="true"
                        android:onClick="onClick"
                        android:paddingLeft="3dp"
                        android:paddingTop="3dp"
                        android:paddingRight="3dp"
                        android:paddingBottom="3dp"
                        app:srcCompat="@drawable/en_flag_inactive" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom|center_horizontal"
                        android:background="@color/lang"
                        android:fontFamily="@font/vsl"
                        android:gravity="bottom|center_horizontal"
                        android:paddingLeft="2dp"
                        android:paddingTop="2dp"
                        android:paddingRight="2dp"
                        android:paddingBottom="2dp"
                        android:text="English"
                        android:textColor="@color/white"
                        android:textSize="30sp" />
                </FrameLayout>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="3" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2">

                    <ImageView
                        android:id="@+id/russian"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:adjustViewBounds="true"
                        android:background="@android:color/background_dark"
                        android:cropToPadding="true"
                        android:onClick="onClick"
                        android:paddingLeft="3dp"
                        android:paddingTop="3dp"
                        android:paddingRight="3dp"
                        android:paddingBottom="3dp"
                        app:srcCompat="@drawable/ru_flag" />

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom|center_horizontal"
                        android:background="@color/lang"
                        android:fontFamily="@font/vsl"
                        android:gravity="bottom|center_horizontal"
                        android:paddingLeft="2dp"
                        android:paddingTop="2dp"
                        android:paddingRight="2dp"
                        android:paddingBottom="2dp"
                        android:text="Русский"
                        android:textColor="@color/white"
                        android:textSize="30sp" />
                </FrameLayout>

            </LinearLayout>

        </LinearLayout>

        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_gravity="bottom|center"
            android:background="@color/colorAccent"
            app:adSize="SMART_BANNER"
            app:adUnitId="@string/banner_ad_id" />
    </FrameLayout>

</android.support.constraint.ConstraintLayout>